# AliPCS-Py

./: .gitignore  CHANGELOG.md  Makefile  README.md  build.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report---bug---.md
.github/workflows/: main.yml  tests.yml
alipcs_py/: __init__.py
alipcs_py/alipcs/: __init__.py  api.py  errors.py  inner.py  pcs.py  tree.py
alipcs_py/app/: __init__.py  account.py  app.py  config.py
alipcs_py/commands/: cat.py  crypto.py  display.py  download.py  duplicate.py  env.py  file_operators.py  index.html  list_files.py  log.py  login.py  play.py  search.py  server.py  share.py  sifter.py  sync.py  upload.py  user.py
alipcs_py/common/: concurrent.py  crypto.py  date.py  downloader.py  event.py  io.py  log.py  net.py  path.py  progress_bar.py  util.py
alipcs_py/config/: __init__.py
alipcs_py/storage/: store.py  tables.py
tests/: conftest.py  datas.py  test_alipcs.py  test_alipcsapi.py  test_commands.py  test_common.py
