[tool.poetry]
name = "AliPCS-Py"
homepage = "https://github.com/PeterDing/AliPCS-Py"
version = "0.6.0-alpha"
description = "Ali Pcs Api and App"
authors = ["PeterDing <dfhayst@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
build = "build.py"

[tool.black]
line-length = 119

[tool.ruff]
ignore = ["E501", "F401", "F841"]
line-length = 119

[tool.poetry.dependencies]
python = "^3.7"
requests = ">=2.28"
requests-toolbelt = ">=0.10"
peewee = ">=3.15"
toml = ">=0.10"
qrcode = ">=7.4"
rich = ">=12.6"
pillow = ">=9.3"
click = ">=8.1"
typing-extensions = ">=4.4"
aget = ">=0.1"
chardet = ">=5.0"
fastapi = ">=0.87"
uvicorn = ">=0.19"
jinja2 = ">=3.1"
cryptography = ">=38.0"
ecdsa = ">=0.18"
cython = ">=0.29"
passlib = ">=1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
setuptools = "^65.6.0"
cython = "^0.29.32"

[tool.poetry.scripts]
AliPCS-Py = 'alipcs_py.app:main'

[tool.pyright]
reportGeneralTypeIssues = true

[build-system]
requires = ["cython", "wheel", "setuptools"]
